--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ button {
    else{ 
     localStorage.setItem("user_name",user_name);
 
-    window.location="kwitter_room.html";
+    window.location="Kwitter_room.html";
   }
 
 }
